--- a/app/src/main/res/layout/activity_menu_principal.xml
+++ b/app/src/main/res/layout/activity_menu_principal.xml
@@ -13,13 +13,42 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true">
 
-        <ImageView
-            android:id="@+id/imageView3"
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:layout_weight="7.94"
-            app:srcCompat="@android:color/darker_gray" />
+            android:layout_weight="7.94">
+
+            <Button
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:id="@+id/soundButton"
+                android:background="@mipmap/sonido"
+                android:layout_alignParentRight="true" />
+
+            <TextView
+                android:text="TextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/tv_nickname"
+                android:layout_alignParentBottom="true"
+                android:layout_centerInParent="true"
+                android:textSize="18sp" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@mipmap/bgdavatar"
+                android:id="@+id/imageView2"
+                android:layout_alignParentBottom="false"
+                android:layout_marginBottom="10dp" />
+
+            <ImageView
+                android:id="@+id/img_avatar"
+                android:layout_height="100dp"
+                android:layout_centerInParent="true"
+                android:layout_centerVertical="true"
+                android:layout_width="100dp" />
+        </RelativeLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
