--- a/app/src/main/res/layout/activity_nuevo_usuario.xml
+++ b/app/src/main/res/layout/activity_nuevo_usuario.xml
@@ -3,13 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@android:color/background_light">
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/background_light"
+        android:background="@mipmap/bgmulticolor"
         android:orientation="vertical"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true">
@@ -55,7 +54,9 @@
                     android:layout_height="75dp"
                     android:layout_gravity="center"
                     android:layout_margin="10dp"
-                    app:srcCompat="@mipmap/mujer" />
+                    app:srcCompat="@mipmap/mujer"
+                    android:alpha="0.8"
+                    android:elevation="0dp" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -77,7 +78,8 @@
                     android:layout_height="75dp"
                     android:layout_gravity="center"
                     android:layout_margin="10dp"
-                    app:srcCompat="@mipmap/hombre" />
+                    app:srcCompat="@mipmap/hombre"
+                    android:alpha="0.8" />
 
                 <TextView
                     android:id="@+id/textView5"
@@ -95,9 +97,12 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="50dp"
             android:layout_marginRight="50dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="50dp"
             android:layout_weight="1"
-            android:background="@mipmap/botonregistro" />
+            android:background="@mipmap/botonregistro"
+            android:elevation="0dp"
+            android:layout_marginBottom="50dp"
+            android:layout_margin="40dp" />
 
     </LinearLayout>
 
