--- a/app/src/main/res/layout/fragment_preguntas_matematicas_texto.xml
+++ b/app/src/main/res/layout/fragment_preguntas_matematicas_texto.xml
@@ -17,7 +17,7 @@
             android:layout_margin="15dp"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
-            android:text="AQUI VA EL TEXTO DE LA PREGUNTA DE ABSTRACCION" />
+            android:text="AQUI VA EL TEXTO DE LA PREGUNTA DE MATEMATICAS" />
 
         <LinearLayout
             android:layout_width="match_parent"
