--- a/app/src/main/res/layout/activity_logica.xml
+++ b/app/src/main/res/layout/activity_logica.xml
@@ -3,16 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/colorPrimary">
+    android:layout_height="match_parent">
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@mipmap/bgred">
 
-        <android.support.v4.view.ViewPager
+        <koukin.llapanmi.CustomViewPager
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/container"/>
