--- a/app/src/main/res/layout/fragment_preguntas_ciencia_texto.xml
+++ b/app/src/main/res/layout/fragment_preguntas_ciencia_texto.xml
@@ -29,31 +29,37 @@
                 android:id="@+id/opcion_A"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Button" />
+                android:text="Button"
+                android:background="@android:color/transparent" />
 
             <Button
                 android:id="@+id/opcion_B"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Button" />
+                android:text="Button"
+                android:background="@android:color/transparent" />
 
             <Button
                 android:id="@+id/opcion_C"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Button" />
+                android:text="Button"
+                android:background="@android:color/transparent" />
 
             <Button
                 android:id="@+id/opcion_D"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Button" />
+                android:text="Button"
+                android:background="@android:color/transparent" />
 
             <Button
                 android:id="@+id/listo"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Listo" />
+                android:layout_width="200dp"
+                android:layout_height="50dp"
+                android:text="Listo"
+                android:background="@mipmap/botonregistro"
+                android:layout_gravity="center_horizontal" />
 
         </LinearLayout>
 
