--- a/app/src/main/res/layout/fragment_preguntas_acertado.xml
+++ b/app/src/main/res/layout/fragment_preguntas_acertado.xml
@@ -11,14 +11,15 @@
         android:orientation="vertical">
 
         <TextView
-            android:text="CORRECTO!"
-            android:layout_width="match_parent"
+            android:id="@+id/textoCorrecto"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="25sp"
+            android:layout_gravity="center_horizontal"
             android:layout_margin="15dp"
-            android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
-            android:id="@+id/textoCorrecto" />
+            android:layout_marginTop="10dp"
+            android:text="CORRECTO!"
+            android:textSize="25sp" />
 
         <ImageView
             android:layout_width="match_parent"
@@ -27,21 +28,31 @@
             android:id="@+id/imageView3" />
 
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_gravity="bottom"
+            android:gravity="bottom"
+            android:orientation="vertical">
 
             <Button
-                android:text="Continuar"
+                android:id="@+id/btn_continuar"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/btn_continuar" />
+                android:layout_height="50dp"
+                android:layout_marginBottom="5dp"
+                android:layout_marginLeft="50dp"
+                android:layout_marginRight="50dp"
+                android:layout_marginTop="5dp"
+                android:background="@mipmap/continuar" />
 
             <Button
-                android:text="Cambiar de seccion"
+                android:id="@+id/btn_salir"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/btn_salir" />
+                android:layout_height="50dp"
+                android:layout_marginBottom="5dp"
+                android:layout_marginLeft="50dp"
+                android:layout_marginRight="50dp"
+                android:layout_marginTop="5dp"
+                android:background="@mipmap/changecat" />
         </LinearLayout>
 
     </LinearLayout>
