--- a/app/src/main/res/layout/fragment_preguntas_abstracto_texto.xml
+++ b/app/src/main/res/layout/fragment_preguntas_abstracto_texto.xml
@@ -54,7 +54,7 @@
                 android:text="Button" />
 
             <Button
-                android:id="@+id/listo"
+                android:id="@+id/btn_listo"
                 android:layout_width="200dp"
                 android:layout_height="50dp"
                 android:layout_gravity="center_horizontal"
