Correcion de caracteres y flechas puestas en select avatar

--- a/app/src/main/res/layout/activity__select__avatar.xml
+++ b/app/src/main/res/layout/activity__select__avatar.xml
@@ -20,30 +20,45 @@
             android:layout_gravity="center"
             app:srcCompat="@mipmap/logojuego" />
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/label"
             android:layout_width="match_parent"
-            android:layout_height="214dp"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:gravity="center"
+            android:text="Escoge tu avatar" />
 
-            <TextView
-                android:id="@+id/label"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:gravity="center"
-                android:text="Escoge tu avatar" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="201dp"
+            android:paddingTop="30dp">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="100dp"
+                app:srcCompat="@mipmap/rightyellow"
+                android:id="@+id/right_arrow"
+                android:layout_alignParentRight="true"
+                android:adjustViewBounds="true"
+                android:cropToPadding="false" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="100dp"
+                app:srcCompat="@mipmap/leftyellow"
+                android:id="@+id/left_arrow"
+                android:adjustViewBounds="true" />
 
             <in.goodiebag.carouselpicker.CarouselPicker
                 android:id="@+id/avatar_carousel"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 app:items_visible="three" />
-        </LinearLayout>
+        </RelativeLayout>
 
         <Button
             android:id="@+id/btn_avatarListo"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="200dp"
             android:layout_marginLeft="50dp"
             android:layout_marginRight="50dp"
             android:layout_marginTop="50dp"
@@ -51,7 +66,9 @@
             android:background="@mipmap/botonregistro"
             android:elevation="0dp"
             android:layout_marginBottom="50dp"
-            android:layout_margin="40dp" />
+            android:layout_margin="40dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_width="250dp" />
 
     </LinearLayout>
 
