borrado de fuentes de res

--- a/app/src/main/res/layout/activity__select__avatar.xml
+++ b/app/src/main/res/layout/activity__select__avatar.xml
@@ -26,7 +26,8 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:gravity="center"
-            android:text="Escoge tu avatar" />
+            android:text="Escoge tu avatar"
+            />
 
         <RelativeLayout
             android:layout_width="match_parent"
