--- a/app/src/main/res/layout/activity_menu_principal.xml
+++ b/app/src/main/res/layout/activity_menu_principal.xml
@@ -19,20 +19,20 @@
             android:layout_weight="7.94">
 
             <Button
-                android:layout_width="50dp"
-                android:layout_height="50dp"
                 android:id="@+id/soundButton"
                 android:background="@mipmap/sonido"
-                android:layout_alignParentRight="true" />
+                android:layout_alignParentRight="true"
+                android:layout_width="30dp"
+                android:layout_height="30dp" />
 
             <TextView
                 android:text="TextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/tv_nickname"
-                android:layout_alignParentBottom="true"
                 android:layout_centerInParent="true"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:layout_alignParentBottom="true" />
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -40,14 +40,16 @@
                 app:srcCompat="@mipmap/bgdavatar"
                 android:id="@+id/imageView2"
                 android:layout_alignParentBottom="false"
-                android:layout_marginBottom="10dp" />
+                android:layout_marginBottom="10dp"
+                android:paddingBottom="10dp" />
 
             <ImageView
                 android:id="@+id/img_avatar"
                 android:layout_height="100dp"
                 android:layout_centerInParent="true"
                 android:layout_centerVertical="true"
-                android:layout_width="100dp" />
+                android:layout_width="100dp"
+                android:paddingBottom="10dp" />
         </RelativeLayout>
 
         <LinearLayout
@@ -59,46 +61,112 @@
             android:dividerPadding="2.5dp"
             android:orientation="horizontal"
             android:showDividers="middle"
-            android:weightSum="2">
+            android:weightSum="2"
+            android:layout_marginTop="30dp">
 
-            <TextView
-                android:id="@+id/score_Logica"
+            <LinearLayout
+                android:orientation="vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="155\nLogica"
-                android:textColor="#33d9ff"
-                android:textSize="18sp" />
+                android:layout_weight="1">
 
-            <TextView
-                android:id="@+id/score_Ciencia"
+                <TextView
+                    android:text="0"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/score1"
+                    android:gravity="center"
+                    android:layout_weight="1"
+                    android:textSize="24sp" />
+
+                <TextView
+                    android:id="@+id/score_Ciencia"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="SCITECH"
+                    android:textAlignment="center"
+                    android:textColor="#96d816"
+                    android:textSize="14sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="120\nCiencia"
-                android:textAlignment="center"
-                android:textColor="#96d816"
-                android:textSize="18sp" />
+                android:layout_weight="1">
 
-            <TextView
-                android:id="@+id/score_Abstraccion"
+                <TextView
+                    android:text="0"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/score2"
+                    android:gravity="center"
+                    android:layout_weight="1"
+                    android:textSize="24sp" />
+
+                <TextView
+                    android:id="@+id/score_Matematicas"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="MATE"
+                    android:textAlignment="center"
+                    android:textColor="#ffb600"
+                    android:textSize="14sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="97\nAbstraccion"
-                android:textAlignment="center"
-                android:textColor="#6b22dd"
-                android:textSize="18sp" />
+                android:layout_weight="1">
 
-            <TextView
-                android:id="@+id/score_Matematicas"
+                <TextView
+                    android:text="0"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/score3"
+                    android:gravity="center"
+                    android:layout_weight="1"
+                    android:textSize="24sp" />
+
+                <TextView
+                    android:id="@+id/score_acertijo"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="ACERTIJO"
+                    android:textAlignment="center"
+                    android:textColor="#6b22dd"
+                    android:textSize="14sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="190\nMatematicas"
-                android:textAlignment="center"
-                android:textColor="#ffb600"
-                android:textSize="18sp" />
+                android:layout_weight="1">
+
+                <TextView
+                    android:text="0"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/score4"
+                    android:gravity="center"
+                    android:layout_weight="1"
+                    android:textSize="24sp" />
+
+                <TextView
+                    android:id="@+id/score_Logica"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="LOGICA"
+                    android:textColor="#33d9ff"
+                    android:textSize="14sp" />
+            </LinearLayout>
+
         </LinearLayout>
 
         <LinearLayout
@@ -112,14 +180,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="@mipmap/logica" />
+                android:background="@mipmap/logica_btn" />
 
             <Button
                 android:id="@+id/btn_ciencia"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="@mipmap/ciencia" />
+                android:background="@mipmap/scitech_btn" />
         </LinearLayout>
 
         <LinearLayout
@@ -133,14 +201,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="@mipmap/abstracto" />
+                android:background="@mipmap/acertijo_btn" />
 
             <Button
                 android:id="@+id/btn_matematicas"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="@mipmap/matematicas" />
+                android:background="@mipmap/mate_btn" />
         </LinearLayout>
 
     </LinearLayout>
