--- a/app/src/main/res/layout/activity_nuevo_usuario.xml
+++ b/app/src/main/res/layout/activity_nuevo_usuario.xml
@@ -27,6 +27,7 @@
             android:layout_gravity="center"
             android:layout_margin="10dp"
             android:ems="10"
+            android:maxLength="8"
             android:hint="Ingresa tu nickname"
             android:inputType="textPersonName" />
 
