--- a/app/src/main/res/layout/activity__select__avatar.xml
+++ b/app/src/main/res/layout/activity__select__avatar.xml
@@ -64,12 +64,17 @@
             android:layout_marginRight="50dp"
             android:layout_marginTop="50dp"
             android:layout_weight="1"
-            android:background="@mipmap/botonregistro"
+            android:background="@color/button_color"
             android:elevation="0dp"
             android:layout_marginBottom="50dp"
             android:layout_margin="40dp"
             android:layout_gravity="center_horizontal"
-            android:layout_width="250dp" />
+            android:layout_width="250dp"
+            android:text="LISTO!"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:gravity="center"
+            android:textAllCaps="true" />
 
     </LinearLayout>
 
