--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#0b2635</color>
     <color name="colorAccent">#133e56</color>
     <color name="orange_pop">#ffb601</color>
+    <color name="button_color">#4c4c4c</color>
 </resources>
